user repository tests